# ChromaticBotBackEnd

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  FlaskSessionCache.py  README.md  chromaticLogic.py  database.py  main.py  pyproject.toml  requirements.txt  spotifyApiConsumer.py
app/: __init__.py  main.py
app/models/: __init__.py  schemas.py
app/routers/: chromatic.py  health.py
app/services/: chromatic_logic.py  database.py  spotify_api.py
